--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,14 +6,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 -   repo: https://github.com/PyCQA/isort
-    rev: 5.9.1
+    rev: 5.11.5
     hooks:
     -   id: isort
+        args: ["--profile", "black"]
 -   repo: https://github.com/psf/black
-    rev: 21.6b0
+    rev: 22.10.0
     hooks:
     -   id: black
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
-    hooks:
-    -   id: flake8
